# twintail

./: Cargo.toml  README.md
.github/workflows/: release.yml
crates/twintail_cli/: Cargo.toml
crates/twintail_cli/src/: color.rs  error.rs  lib.rs  strings.rs
crates/twintail_cli/src/subcommands/: app_info.rs  mod.rs
crates/twintail_cli/src/subcommands/crypt/decrypt/: ab.rs  json.rs  mod.rs  suite.rs
crates/twintail_cli/src/subcommands/crypt/encrypt/: ab.rs  json.rs  mod.rs  suite.rs
crates/twintail_cli/src/subcommands/fetch/: ab.rs  abinfo.rs  mod.rs  save.rs  suite.rs
crates/twintail_common/: Cargo.toml
crates/twintail_common/src/: color.rs  error.rs  lib.rs  utils.rs
crates/twintail_common/src/crypto/: aes.rs  aes_msgpack.rs  mod.rs
crates/twintail_common/src/models/: enums.rs  mod.rs  serde.rs
crates/twintail_common/src/utils/: mod.rs  progress.rs
crates/twintail_core/: Cargo.toml
crates/twintail_core/src/: apk_extractor.rs  decrypt.rs  encrypt.rs  error.rs  fetch.rs  fs.rs  lib.rs
crates/twintail_core/src/config/: crypt_config.rs  download_ab_config.rs  fetch_config.rs  mod.rs
crates/twintail_core/src/crypto/: assetbundle.rs  decrypt.rs  encrypt.rs  mod.rs
crates/twintail_sekai/: Cargo.toml
crates/twintail_sekai/src/: error.rs  headers.rs  lib.rs  models.rs  sekai_client.rs
crates/twintail_sekai/src/url/: global_provider.rs  japan_provider.rs  mod.rs  server_provider.rs  test_provider.rs  urls.rs
docs/commands/: en.md  jp.md
docs/readme/: jp.md
docs/usage/: en.md  jp.md
src/: apk_extractor.rs  constants.rs  decrypt.rs  encrypt.rs  error.rs  fetch.rs  lib.rs  main.rs  utils.rs
src/api/: headers.rs  mod.rs  sekai_client.rs  url_provider.rs
src/api/url/: global_provider.rs  japan_provider.rs  mod.rs  server_provider.rs  test_provider.rs
src/config/: crypt_config.rs  download_ab_config.rs  fetch_config.rs  mod.rs
src/constants/: color.rs  crypto.rs  header.rs  mod.rs  strings.rs  url.rs
src/crypto/: aes.rs  aes_msgpack.rs  assetbundle.rs  mod.rs
src/models/: api.rs  enums.rs  mod.rs  serde.rs
src/subcommands/: app_info.rs  decrypt.rs  encrypt.rs  fetch.rs  mod.rs
src/subcommands/crypt/: decrypt.rs  encrypt.rs  mod.rs
src/subcommands/crypt/decrypt/: ab.rs  json.rs  mod.rs  suite.rs
src/subcommands/crypt/encrypt/: ab.rs  json.rs  mod.rs  suite.rs
src/subcommands/fetch/: ab.rs  abinfo.rs  mod.rs  save.rs  suite.rs
src/utils/: apk_extractor.rs  fs.rs  mod.rs  progress.rs  styles.rs
