[package]
name = "twintail"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["alloc"] }
clap = { version = "4.5.20", features = ["derive"] }
reqwest = "0.12.9"
rmp-serde = "1.3.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_plain = "1.0.2"
thiserror = "1.0.66"
tokio = { version = "1.41.0", features = ["full"] }
