[package]
name = "twintail"
version = "1.1.2"
edition = "2021"

[lib]
name = "twintail"
path = "src/lib.rs"

[[bin]]
name = "twintail"
path = "src/main.rs"
required-features = ["cli"]

[features]
cli = []

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[dependencies]
aes = "0.8.4"
anstyle = "1.0.10"
cbc = { version = "0.1.2", features = ["alloc"] }
clap = { version = "4.5.20", features = ["derive"] }
fs2 = "0.4.3"
futures = "0.3.31"
humansize = "2.1.3"
indicatif = { version = "0.17.8" }
regex = "1.11.1"
reqwest = "0.12.9"
rmp-serde = "1.3.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_plain = "1.0.2"
thiserror = "1.0.66"
tokio = { version = "1.41.0", features = ["full"] }
tokio-retry = "0.3.0"
zip = "2.2.0"

[dev-dependencies]
mockito = "1.5.0"
tempfile = "3.13.0"
