[package]
name = "twintail_cli"
edition = "2024"

[dependencies]
twintail_common.workspace = true
twintail_core.workspace = true
twintail_sekai.workspace = true

anstyle.workspace = true
clap.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
indicatif.workspace = true