[package]
name = "twintail_core"
edition = "2024"

[dependencies]
twintail_common.workspace = true
twintail_sekai.workspace = true

rayon.workspace = true
tokio.workspace = true
tokio-retry.workspace = true
thiserror.workspace = true
regex.workspace = true
zip.workspace = true
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
hmac.workspace = true
sha2.workspace = true
futures.workspace = true
humansize.workspace = true
fs2.workspace = true
indicatif.workspace = true

[dev-dependencies]
tempfile.workspace = true